# Cloth-Simulation

./: CMakeLists.txt  Cloth.cpp  Cloth.h  Main.cpp  Spring.h  imgui.ini
.cache/clangd/index/: Cloth.cpp.2DC17E164D7FB0C1.idx  Cloth.h.2E9E2528AA58FAB0.idx  Main.cpp.37D7E6E22DF05071.idx  Spring.h.EF2B474A5B526D0A.idx
